fail_crate/tests/const_and_into_iter.stderr
error: `into_iter` cannot be used in constant constructors.
 --> fail_crate/tests/const_and_into_iter.rs:6:11
  |
6 |     #[new(into_iter)]
  |           ^^^^^^^^^
