fail_crate/tests/const_and_into_iter.rs
use inew::New;

#[derive(New)]
#[new(const)]
struct A {
    #[new(into_iter)]
    x: Vec<u32>
}

fn main() {}
